<resources>
    <string name="app_name">Vu_Wang</string>
    <string name="events">Events</string>
    <string name="eventDetails">Event Details</string>
    <string name="eventNameLocale">Event Name</string>
    <string name="eventDateLocale">Date </string>
    <string name="eventTimeLocale">Time </string>
    <string name="deleteItem">Delete Item</string>
    <string name="addItems">Add Items</string>
    <string name="editEvent">Edit Event</string>
    <string name="items">Items:</string>
    <string name="itemDetails">Item Details</string>
    <string name="editItem">Edit Item</string>
    <string name="itemLocale">Item</string>
    <string name="unitLocale">Unit</string>
    <string name="quantityLocale">Quantity</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Note: case-sensitive</string>
    <string name="searchForEvent">Search For an Event</string>
    <string name="search">Search</string>
    <string name="found">Found Events</string>
    <string name="create">Create Event</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="fill">Please fill in all data</string>
    <string name="itemsLabel">Items: </string>
    <string name="quantityRemainingLocale">Quantity Left to Purchase: %s</string>
    <string name="selectTableLabel">Select Table</string>
    <string name="eventsLabel">Events</string>
    <string name="foundEventsLabel">Found Events</string>
    <string name="searchForEventLabel">Search For an Event</string>
    <string name="eventDetailsLabel">Event Details</string>
    <string name="createEventLabel">Create Event</string>
    <string name="createItemLabel">Create Item</string>
    <string name="editEventLabel">Edit Event</string>
    <string name="deleteEventLabel">Delete Event</string>
    <string name="addItemsLabel">Add Items</string>
    <string name="editItemLabel">Edit Item</string>
    <string name="itemDetailsLabel">Item Details</string>
    <string name="deleteItemLabel">Delete Item</string>
    <string name="viewDatabaseLabel">View Database</string>
    <string name="selectItemContributionLabel">Select Item to Contribute to: </string>
    <string name="selectEventContributionLabel">Select Event to Contribute to: </string>
    <string name="searchLabel">Search</string>
    <string name="cancelLabel">Cancel</string>
    <string name="saveLabel">Save</string>
    <string name="addLabel">Add</string>
    <string name="doneLabel">Done</string>
    <string name="notCaseSensitiveNote">Note: Not Case-Sensitive</string>
    <string name="nameHint">Name</string>
    <string name="eventHint">Event</string>
    <string name="itemNameHint">Item Name</string>
    <string name="unitsHint">Units</string>
    <string name="quantityHint">Quantity</string>
    <string name="dateHint">Date</string>
    <string name="timeHint">Time</string>
    <string name="amountHint">Amount</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
