<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ca.bcit.ass3.vu_wang.EditItemFragment">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TitleText"
        android:text="@string/editItemLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <EditText
        android:id="@+id/itemName"
        style="@style/InputField"
        android:hint="@string/itemNameHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <EditText
        android:id="@+id/unit"
        style="@style/InputField"
        android:hint="@string/unitsHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemName" />

    <EditText
        android:id="@+id/quantity"
        style="@style/InputField"
        android:hint="@string/quantityHint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unit" />

    <Button
        android:id="@+id/saveButton"
        style="@style/SmallButton"
        android:text="@string/saveLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/SmallButton"
        android:text="@string/cancelLabel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quantity" />

</android.support.constraint.ConstraintLayout>
