<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titleTextView"
        style="@style/TitleText"
        android:text="@string/searchForEventLabel"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/subtitleTextView"
        style="@style/RegularText"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/notCaseSensitiveNote" />

    <EditText
        android:id="@+id/eventName"
        style="@style/InputField"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:hint="@string/eventHint" />

    <Button
        android:id="@+id/searchButton"
        style="@style/SmallButton"
        app:layout_constraintTop_toBottomOf="@id/eventName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/searchLabel" />

    <Button
        android:id="@+id/cancelButton"
        style="@style/SmallButton"
        app:layout_constraintTop_toBottomOf="@id/eventName"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cancelLabel" />

</android.support.constraint.ConstraintLayout>
